--- a/.github/workflows/waka-stats.yml
+++ b/.github/workflows/waka-stats.yml
@@ -16,3 +16,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LINES_OF_CODE: "True"
+          UPDATED_DATE_FORMAT: "%d.%m.%Y %H:%M:%S"
+          SHOW_LOC_CHART: "False"
